--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#"> <small>Register</small></a>
-                            </li> 
+                            </li>
                         </ul>
                         <form role="registration">
                             <button class="btn btn-outline-primary fw-semibold px-4" type="register">Register</button>
@@ -52,6 +52,53 @@
                 </div>
             </nav>
         </section>
+
+        <!-- slider section start  -->
+        <section class="container my-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+
+                    <!-- first slide  -->
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block img-fluid img-overlay" alt="...">
+                        <div class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
+                            <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
+                            <p class="my-md-3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                            <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                    <!-- second slide  -->
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-2.png" class="d-block img-fluid img-overlay" alt="...">
+                        <div class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
+                            <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
+                            <p class="my-md-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit error tempora eius voluptate, consequuntur minus veniam reiciendis modi ex ut!</p>
+                            <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                    <!-- third slide  -->
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.png" class="d-block img-fluid img-overlay" alt="...">
+                        <div class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
+                            <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
+                            <p class="my-md-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit error tempora eius voluptate, consequuntur minus veniam reiciendis modi ex ut!</p>
+                            <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider section end -->
     </header>
 
 
