--- a/index.html
+++ b/index.html
@@ -100,6 +100,126 @@
         </section>
         <!-- slider section end -->
     </header>
+    <main>
+        <!-- our courses section start  -->
+        <section class="container">
+            <div class="text-center mb-5">
+                <h1 class="fw-bold">Discover Our Popular <br> Courses</h1>
+                <p class="text-black-50">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+
+            <!-- singel card area start -->
+            <div class="row row-cols-1 row-cols-lg-2 g-3">
+                <!-- first card  -->
+                <div class="col">
+                    <div class="card" >
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- second card  -->
+                <div class="col">
+                    <div class="card" >
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Javascript Basic to advanced</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- third card  -->
+                <div class="col">
+                    <div class="card" >
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Fullstack Web Development</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- forth card  -->
+                <div class="col">
+                    <div class="card d-none d-md-block">
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Digital Marketing</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- fifth card  -->
+                <div class="col">
+                    <div class="card d-none d-md-block" >
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Photography Basic Rules</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- sixth card  -->
+                <div class="col">
+                    <div class="card d-none d-md-block" >
+                        <div class="row g-0 text-center text-md-start">
+                          <div class="col-md-4 ">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start card-img-size"  alt="...">
+                          </div>
+                          <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="card-body ">
+                              <h5 class="card-title fw-bold text-black">Motion Graphics</h5>
+                              <p class="card-text"><small>Some quick example text to build on the card title <br> and make up the bulk of the card.</small></p>
+                              <h6 class="text-primary fw-bold">Price : 20$</h6>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div> 
+            </div>
+            <!-- singel card area end -->
+            <div class="mt-md-4 d-flex align-items-center justify-content-center">
+                <button class="btn btn-primary px-4">See More Courses</button>
+            </div>
+        </section>
+        <!-- our courses section end -->
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
