--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- stylesheet link  -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- front aowsome link  -->
+    <script src="https://kit.fontawesome.com/b25e5ba203.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -302,6 +304,23 @@
         </section>
         <!-- Frequently asked question section end -->
     </main>
+
+
+    <!-- footer area start---->
+    <footer>
+        <div class="bg-black text-center py-5">
+            <div class="fw-bold text-white"><h3>PowerPlex-Edu</h3></div>  
+            <div class="text-muted">
+                <p>Office 41, Zawaya Buildin, Ghala Muscat,<br> Sultanate of Oman <br><small>Privacy Ploicy | Terms of use</small></p>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook text-info"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin px-3"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube text-danger"></i></a>
+            </div> 
+        </div>
+    </footer>
+    <!-- footer area end  -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
