different text area modification

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">It is a long established fact that a reader will be distracted by the
-                                readable content of a page when looking at its layout.</p>
+                            <p class="my-md-3">Have a dream?  Start learning your way to it... <br>Please Resister for a free trial and empower with a foundation in new-age technology skills.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
@@ -77,8 +76,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit error
-                                tempora eius voluptate, consequuntur minus veniam reiciendis modi ex ut!</p>
+                            <p class="my-md-3">Have a dream?  Start learning your way to it... <br>Please Resister for a free trial and empower with a foundation in new-age technology skills.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
@@ -88,8 +86,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit error
-                                tempora eius voluptate, consequuntur minus veniam reiciendis modi ex ut!</p>
+                            <p class="my-md-3">Have a dream?  Start learning your way to it... <br>Please Resister for a free trial and empower with a foundation in new-age technology skills.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
@@ -113,8 +110,7 @@
         <section class="container my-5 ">
             <div class="text-center mb-5">
                 <h1 class="fw-bold">Discover Our Popular <br> Courses</h1>
-                <p class="text-black-50">It is a long established fact that a reader will be distracted by the readable
-                    <br> content of a page when looking at its layout.</p>
+                <p class="text-black-50">Executive Education courses offer you <br> the skills you need to pivot and expand your career.</p>
             </div>
 
             <!-- singel card area start -->
@@ -130,8 +126,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Fundamental Of UI/UX Design</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text mt-0"><small>UX  is all about identifying and solving user problems; UI is all about creating intuitive,interactive interfaces.</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
@@ -149,8 +144,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Javascript Basic to advanced</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text"><small>Javascript (JS) is a scripting languages, primarily used on the Web.</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
@@ -168,8 +162,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Fullstack Web Development</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text"><small>A full stack web developer is a person who can develop both client and server software.</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
@@ -187,8 +180,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Digital Marketing</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text"><small>promotion of brands to connect with potential customers using the internet and digital technologies</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
@@ -206,8 +198,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Photography Basic Rules</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text"><small>process where design teams implement ideas into tangible forms from paper to digital.</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
@@ -225,8 +216,7 @@
                             <div class="col-md-8 d-lg-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Motion Graphics</h5>
-                                    <p class="card-text"><small>Some quick example text to build on the card title <br>
-                                            and make up the bulk of the card.</small></p>
+                                    <p class="card-text"><small>create the illusion of motion or rotation, and usually combined with audio for use in multimedia projects.</small></p>
                                     <h6 class="text-primary fw-bold">Price : 20$</h6>
                                 </div>
                             </div>
