--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
                 <!-- forth card  -->
                 <div class="col">
-                    <div class="card d-none d-md-block">
+                    <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
                                 <img src="images/course/course-4.png" class="img-fluid rounded-start card-img-size"
@@ -198,7 +198,7 @@
                 </div>
                 <!-- fifth card  -->
                 <div class="col">
-                    <div class="card d-none d-md-block">
+                    <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
                                 <img src="images/course/course-5.png" class="img-fluid rounded-start card-img-size"
@@ -217,7 +217,7 @@
                 </div>
                 <!-- sixth card  -->
                 <div class="col">
-                    <div class="card d-none d-md-block">
+                    <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
                                 <img src="images/course/course-6.png" class="img-fluid rounded-start card-img-size"
@@ -237,23 +237,25 @@
             </div>
             <!-- singel card area end -->
             <div class="mt-md-4 d-flex align-items-center justify-content-center">
-                <button class="btn btn-primary px-4">See More Courses</button>
+                <button class="btn btn-primary px-4 fw-semibold">See More Courses</button>
             </div>
         </section>
         <!-- our courses section end -->
 
+
+
+
         <!-- registration section start  -->
         <section  class="container my-5" id="registration">
             <div class="bg-info text-white  py-5 rounded-3">
-                <div class="row row-cols-1 row-cols-md-2 p-5 g-2">
-                    <div class="col d-md-flex justify-content-center align-items-center">
+                <div class="row row-cols-1 row-cols-lg-2 p-5 g-2">
+                    <div class="col text-md-center text-lg-start d-lg-flex justify-content-center align-items-center">
                         <div>
                             <h2>Ready to join?</h2>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a
-                                page when looking at its layout.</p>
+                            <p>Start, switch, or advance your career with more than <span class=" fw-bold">5,000 courses, Professional Certificates, and degrees</span> from world-class universities and companies.</p>
                         </div>
                     </div>
-                    <div class="col text-center d-md-flex justify-content-center align-items-center">
+                    <div class="col text-center d-lg-flex justify-content-center align-items-center">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-danger fw-bold mt-3 mt-md-0 px-5 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Register Now
@@ -386,6 +388,23 @@
             </div>
         </section>
         <!-- Frequently asked question section end -->
+
+
+        <!-- Trusted by companies section start  -->
+        <section class="container d-none d-lg-block py-5 my-5">
+            <div class="text-center mb-4">
+                <h1 class="fw-bold">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-lg-flex justify-content-between ">
+                <div class="img-fluid"><img src="images/company/company-1.png" alt=""></div>
+                <div class="img-fluid"><img src="images/company/company-2.png" alt=""></div>
+                <div class="img-fluid"><img src="images/company/company-3.png" alt=""></div>
+                <div class="img-fluid"><img src="images/company/company-4.png" alt=""></div>
+                <div class="img-fluid"><img src="images/company/company-5.png" alt=""></div>
+                <div class="img-fluid"><img src="images/company/company-6.png" alt=""></div>
+            </div>
+        </section>
+        <!-- Trusted by companies section end -->
     </main>
 
 
