--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="container">
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand fw-bold text-black-50" href="#">PowerPlex Edu</a>
+                    <a class="navbar-brand fw-bolder text-danger" href="#">PowerPlex Edu</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -251,7 +251,7 @@
                 <div class="row row-cols-1 row-cols-lg-2 p-5 g-2">
                     <div class="col text-md-center text-lg-start d-lg-flex justify-content-center align-items-center">
                         <div>
-                            <h2>Ready to join?</h2>
+                            <h2 class="fw-bold">Ready to join?</h2>
                             <p>Start, switch, or advance your career with more than <span class=" fw-bold">5,000 courses, Professional Certificates, and degrees</span> from world-class universities and companies.</p>
                         </div>
                     </div>
