some text change

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">Have a dream? Start learning your way to it... <br>Please Resister for a
-                                free trial and empower with a foundation in new-age technology skills.</p>
+                            <p class="my-md-3">Have a dream?... Start learning your way to it <br>Please Register for a free trial.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
@@ -77,8 +76,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">Have a dream? Start learning your way to it... <br>Please Resister for a
-                                free trial and empower with a foundation in new-age technology skills.</p>
+                            <p class="my-md-3">Have a dream?... Start learning your way to it <br>Please Register for a free trial.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
@@ -88,8 +86,7 @@
                         <div
                             class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
-                            <p class="my-md-3">Have a dream? Start learning your way to it... <br>Please Resister for a
-                                free trial and empower with a foundation in new-age technology skills.</p>
+                            <p class="my-md-3">Have a dream?.... Start learning your way to it <br>Please Register for a free trial.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
                         </div>
                     </div>
