meet our student section add

--- a/index.html
+++ b/index.html
@@ -295,6 +295,59 @@
         </section>
         <!-- registration section end -->
 
+
+        <!-- our successful students section start -->
+        <section class="container my-5 ">
+            <div class="text-center text-md-start">
+                <h1 class="fw-bold">
+                    Meet Our Successfull <br> Students
+                </h1>
+                <p> Our team is committed to your success. Here some of our successfull students. <br>Now it's high time , We are excited to invest in your success </p>
+            </div>
+
+            <div class="my-5">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 text-center text-md-start">
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/extra/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Awlad Hossain</h5>
+                          <p class="card-text">UIUX Designer</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/extra/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Jannatul Islam</h5>
+                          <p class="card-text">Motion Design</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/extra/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Imran Hossain</h5>
+                          <p class="card-text">Graphic Designer</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/extra/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nishi Akter</h5>
+                          <p class="card-text">Web Developer</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <!-- our successful students section end -->
+
         <!-- Frequently asked question section start  -->
         <section class="container my-5 w-75">
             <div class="text-center mb-4">
