--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -141,7 +141,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-2.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -160,7 +160,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-3.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -179,7 +179,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-4.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -198,7 +198,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-5.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -217,7 +217,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-6.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -246,7 +246,7 @@
         <section  class="container my-5" id="registration">
             <div class="bg-info text-white  py-5 rounded-3">
                 <div class="row row-cols-1 row-cols-lg-2 p-5 g-2">
-                    <div class="col text-md-center text-lg-start d-lg-flex justify-content-center align-items-center">
+                    <div class="col text-md-center ps-5 text-lg-start d-lg-flex justify-content-center align-items-center">
                         <div>
                             <h2 class="fw-bold">Ready to join?</h2>
                             <p>Start, switch, or advance your career with more than <span class=" fw-bold">5,000 courses, Professional Certificates, and degrees</span> from world-class universities and companies.</p>
