card image size  add

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -141,7 +141,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-2.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -160,7 +160,7 @@
                     <div class="card">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-3.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -179,7 +179,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-4.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -198,7 +198,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-5.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
@@ -217,7 +217,7 @@
                     <div class="card d-none d-lg-block">
                         <div class="row g-0 text-center text-md-start">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-6.png" class="img-fluid rounded-start"
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start card-img-size"
                                     alt="...">
                             </div>
                             <div class="col-md-8 d-lg-flex align-items-center">
