card image height and width add

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                     <!-- first slide  -->
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block img-fluid img-overlay" alt="...">
-                        <div
-                            class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
+                        <div class="carousel-caption d-block d-lg-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="fw-bold my-0">Get Started Digital <br> Learning</h1>
                             <p class="my-md-3">Have a dream?... Start learning your way to it <br>Please Register for a free trial.</p>
                             <button class="btn btn-primary px-4 my-md-2 fw-semibold">Get Started</button>
@@ -109,7 +108,7 @@
         <!-- our courses section start  -->
         <section class="container my-5 ">
             <div class="text-center mb-5">
-                <h1 class="fw-bold">Discover Our Popular <br> Courses</h1>
+                <h1 class="fw-bold ">Discover Our Popular <br> Courses</h1>
                 <p class="text-black-50">Executive Education courses offer you <br> the skills you need to pivot and
                     expand your career.</p>
             </div>
@@ -119,12 +118,12 @@
                 <!-- first card  -->
                 <div class="col">
                     <div class="card">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start w-100 h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Fundamental Of UI/UX Design</h5>
                                     <p class="card-text mt-0"><small>UX is all about identifying and solving user
@@ -139,12 +138,12 @@
                 <!-- second card  -->
                 <div class="col">
                     <div class="card">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-2.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start w-100  h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Javascript Basic to advanced</h5>
                                     <p class="card-text"><small>Javascript (JS) is a scripting languages, primarily used
@@ -158,12 +157,12 @@
                 <!-- third card  -->
                 <div class="col">
                     <div class="card">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-3.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start w-100  h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Fullstack Web Development</h5>
                                     <p class="card-text"><small>A full stack web developer is a person who can develop
@@ -177,12 +176,12 @@
                 <!-- forth card  -->
                 <div class="col">
                     <div class="card d-none d-lg-block">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-4.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start w-100  h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Digital Marketing</h5>
                                     <p class="card-text"><small>promotion of brands to connect with potential customers
@@ -196,12 +195,12 @@
                 <!-- fifth card  -->
                 <div class="col">
                     <div class="card d-none d-lg-block">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-5.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start w-100  h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Photography Basic Rules</h5>
                                     <p class="card-text"><small>process where design teams implement ideas into tangible
@@ -215,12 +214,12 @@
                 <!-- sixth card  -->
                 <div class="col">
                     <div class="card d-none d-lg-block">
-                        <div class="row g-0 text-center text-md-start">
+                        <div class="row g-0 ">
                             <div class="col-md-4 ">
-                                <img src="images/course/course-6.png" class="img-fluid rounded-start card-img-size"
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start w-100  h-100"
                                     alt="...">
                             </div>
-                            <div class="col-md-8 d-lg-flex align-items-center">
+                            <div class="col-md-8 d-md-flex align-items-center">
                                 <div class="card-body ">
                                     <h5 class="card-title fw-bold text-black">Motion Graphics</h5>
                                     <p class="card-text"><small>create the illusion of motion or rotation, and usually
@@ -234,7 +233,7 @@
             </div>
             <!-- singel card area end -->
             <div class="mt-md-4 d-flex align-items-center justify-content-center">
-                <button class="btn btn-primary px-4 fw-semibold">See More Courses</button>
+                <button class="btn btn-primary px-4 py-2 fw-semibold">See More Courses</button>
             </div>
         </section>
         <!-- our courses section end -->
